27_matrix_input/grade.txt
Grading at Thu Jul 16 09:32:38 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:56:25: error: comparison between pointer and integer [-Werror]
     if(strchr(line,'\n')<10){
                         ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
